salsa-2022-tests/tests/compile-fail/specify-does-not-work-if-the-key-is-a-salsa-input.stderr
error[E0277]: the trait bound `MyInput: TrackedStructInDb<dyn Db>` is not satisfied
  --> tests/compile-fail/specify-does-not-work-if-the-key-is-a-salsa-input.rs:20:1
   |
20 | #[salsa::tracked(jar = Jar, specify)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `TrackedStructInDb<dyn Db>` is not implemented for `MyInput`
   |
   = help: the trait `TrackedStructInDb<DB>` is implemented for `MyTracked`
note: required by a bound in `function::specify::<impl FunctionIngredient<C>>::specify_and_record`
  --> $WORKSPACE/components/salsa-2022/src/function/specify.rs
   |
   |     pub fn specify_and_record<'db>(&'db self, db: &'db DynDb<'db, C>, key: Id, value: C::Value<'db>)
   |            ------------------ required by a bound in this associated function
   |     where
   |         C::Input<'db>: TrackedStructInDb<DynDb<'db, C>>,
   |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `function::specify::<impl FunctionIngredient<C>>::specify_and_record`
   = note: this error originates in the attribute macro `salsa::tracked` (in Nightly builds, run with -Z macro-backtrace for more info)
